[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures = "0.3"
json = "0.12.4"
sha1 = "0.10.5"
tokio = { version = "1.14.1", features = ["full"] }
bytes = "0.5.4"
hex = "0.4.3"
