[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures = "0.3"
json = "0.12.4"
sha1 = "0.10.5"
tokio = { version = "1.14.1", features = ["full"] }
bytes = "0.5.4"
hex = "0.4.3"
chrono = "0.4"
sha2 = "0.10.0"
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["sha2"]}
uuid = { version = "1.3.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
